[gd_scene load_steps=9 format=2]

[ext_resource path="res://inventory/images/tooltip.png" type="Texture" id=1]
[ext_resource path="res://inventory/Tooltip.gd" type="Script" id=2]
[ext_resource path="res://inventory/CharacterPanel.gd" type="Script" id=3]
[ext_resource path="res://inventory/ItemSlot.gd" type="Script" id=4]
[ext_resource path="res://inventory/Inventory.gd" type="Script" id=5]
[ext_resource path="res://inventory/DraggableBar.gd" type="Script" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.203922, 0.203922, 0.203922, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.203922, 0.203922, 0.203922, 1 )

[node name="InventoryGui" type="Control"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterPanel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 37.1194
margin_top = 196.929
margin_right = 217.119
margin_bottom = 373.929
mouse_filter = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopBar" type="Panel" parent="CharacterPanel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -94.0
margin_right = 94.0
margin_bottom = 20.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CharacterPanel/TopBar"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Character Panel"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="GridContainer" parent="CharacterPanel"]
margin_left = 4.0
margin_top = 24.0
margin_right = 38.0
margin_bottom = 172.0
custom_constants/vseparation = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SlotHelmet" type="Panel" parent="CharacterPanel/Left"]
margin_right = 34.0
margin_bottom = 34.0
rect_min_size = Vector2( 34, 34 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
slotType = 1

[node name="SlotNeck" type="Panel" parent="CharacterPanel/Left"]
margin_top = 38.0
margin_right = 34.0
margin_bottom = 72.0
rect_min_size = Vector2( 34, 34 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
slotType = 4

[node name="SlotArmor" type="Panel" parent="CharacterPanel/Left"]
margin_top = 76.0
margin_right = 34.0
margin_bottom = 110.0
rect_min_size = Vector2( 34, 34 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
slotType = 2

[node name="SlotFeet" type="Panel" parent="CharacterPanel/Left"]
margin_top = 114.0
margin_right = 34.0
margin_bottom = 148.0
rect_min_size = Vector2( 34, 34 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
slotType = 3

[node name="Right" type="GridContainer" parent="CharacterPanel"]
margin_left = 142.451
margin_top = 24.0
margin_right = 176.451
margin_bottom = 172.0
custom_constants/vseparation = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SlotRing" type="Panel" parent="CharacterPanel/Right"]
margin_right = 34.0
margin_bottom = 34.0
rect_min_size = Vector2( 34, 34 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
slotType = 5

[node name="SlotRing2" type="Panel" parent="CharacterPanel/Right"]
margin_top = 38.0
margin_right = 34.0
margin_bottom = 72.0
rect_min_size = Vector2( 34, 34 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
slotType = 6

[node name="SlotLHand" type="Panel" parent="CharacterPanel/Right"]
margin_top = 76.0
margin_right = 34.0
margin_bottom = 110.0
rect_min_size = Vector2( 34, 34 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
slotType = 7

[node name="SlotRHand" type="Panel" parent="CharacterPanel/Right"]
margin_top = 114.0
margin_right = 34.0
margin_bottom = 148.0
rect_min_size = Vector2( 34, 34 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
slotType = 8

[node name="Inventory" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 272.366
margin_top = 189.668
margin_right = 461.366
margin_bottom = 421.668
mouse_filter = 1
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopBar" type="Panel" parent="Inventory"]
anchor_left = -0.023
anchor_right = 1.023
anchor_bottom = 0.109
margin_left = 0.00200033
margin_right = -0.0019989
margin_bottom = 0.0719986
mouse_filter = 1
custom_styles/panel = SubResource( 2 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Inventory/TopBar"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Inventory"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SlotsContainer" type="ScrollContainer" parent="Inventory"]
anchor_right = 1.0
anchor_bottom = 0.887
margin_left = 3.0
margin_top = 28.0
margin_right = -3.0
margin_bottom = 0.215988
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slots" type="GridContainer" parent="Inventory/SlotsContainer"]
custom_constants/vseparation = 1
custom_constants/hseparation = 1
columns = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SortRarityButton" type="Button" parent="Inventory"]
margin_left = 0.739502
margin_top = 210.26
margin_right = 96.7395
margin_bottom = 230.26
text = "Sort by Rarity"

[node name="Tooltip" type="NinePatchRect" parent="."]
visible = false
margin_left = 535.0
margin_top = 235.0
margin_right = 663.0
margin_bottom = 363.0
texture = ExtResource( 1 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Item Name" type="Label" parent="Tooltip"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -59.0
margin_top = 8.0
margin_right = 59.0
margin_bottom = 23.0
text = "Item Name"
align = 1

[node name="Item Value" type="Label" parent="Tooltip"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -59.0
margin_top = 31.5323
margin_right = 59.0
margin_bottom = 46.5323
text = "Value: 0"

[node name="AddItemButton" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 213.039
margin_top = 80.0554
margin_right = 305.039
margin_bottom = 113.055
text = "Add Item"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Items" type="Node" parent="."]
[connection signal="pressed" from="Inventory/SortRarityButton" to="Inventory" method="_on_SortRarityButton_pressed"]
[connection signal="pressed" from="AddItemButton" to="Inventory" method="_on_AddItemButton_pressed"]
